# ech-board

./: Cargo.toml
.github/workflows/: charts.yaml  operator-image.yaml  relay-image.yaml  relay-image.yml  worker-image.yaml
charts/ech-board-operator/: Chart.yaml
charts/ech-board-operator-crds/: Chart.yaml
charts/ech-board-operator-crds/templates/: echboardnetwork.yaml
charts/ech-board-operator/templates/: deployment.yaml  rbac.yaml
common/: Cargo.toml
common/src/: lib.rs
crds/: echboardnetwork.yaml
external-crds/: pushsecret.yaml
helm/manager/: Chart.yaml
helm/manager/files/: reconcile.sh
helm/manager/templates/: 01-serviceaccount.yaml  02-clusterrole.yaml  03-clusterrolebinding.yaml  10-configmap.yaml  20-cronjob.yaml
helm/network/: Chart.yaml
helm/network/files/: fullnode-prepare.sh  sui-utils.sh
helm/network/templates/: 10-configmap-validator-list.yaml  11-external-secrets.yaml  20-service-validator-headless.yaml  21-service-fullnode-headless.yaml  22-service-fullnode-rpc.yaml  30-statefulset-validator.yaml  31-statefulset-fullnode.yaml  40-relay.yaml
move/: Move.toml
move/sources/: feed.move  forum.move  intent.move  nonce.move  sharded_counter.move
operator/: Cargo.toml  Dockerfile  build.rs
operator/src/: config.rs  constants.rs  crds.rs  error.rs  main.rs  reconcilers.rs  support.rs  workflow.rs
operator/src/reconcilers/: bootstrap.rs  fullnode_rpc.rs  genesis.rs  key_node.rs  move_publish.rs  prune_fullnodes.rs  prune_keys.rs  prune_validators.rs  seed_peers.rs  workload_archive.rs  workload_checkpoint_blob.rs  workload_fullnodes.rs  workload_graphql.rs  workload_indexer_alt.rs  workload_relay.rs  workload_validators.rs
operator/src/support/: components.rs  extensions.rs  job_builder.rs  pod_builder.rs  yamls.rs
operator/src/support/yamls/: fullnode.rs  validator.rs
relay/: .dockerignore  Cargo.toml  Dockerfile
relay/queries/: get_board_slug_registry.graphql  get_shards.graphql  schema.graphql  schema_old.graphql
relay/src/: app_state.rs  config.rs  error.rs  main.rs  registry.rs  seaweed.rs  shards.rs  sponsor.rs  thumbnail.rs  types.rs  upstream.rs
relay/src/captcha/: mod.rs  turnstile.rs
relay/src/handlers/: admin.rs  board.rs  content.rs  feed.rs  forum.rs  mod.rs  nonce.rs  send.rs  thread.rs  uid.rs
worker/: Cargo.toml  Dockerfile
worker/src/: config.rs  main.rs
worker/src/commands/: download_db_snapshot.rs  download_genesis.rs  genesis.rs  keys.rs  mod.rs  move_publish.rs  seed_peers.rs
worker/src/sui_cli/: client.rs  genesis.rs  keytool.rs  mod.rs  move_.rs  tool.rs
worker/src/sui_cli/tool/: download_db_snapshot.rs  dump_validators.rs
