[package]
name = "ech-board-operator"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
async-trait = "0.1"
envy = "0.4"
futures = "0.3"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["client", "derive", "runtime", "rustls-tls"] }
kube-lease-manager = "0.11"
serde_json = "1"
serde-saphyr = "0.0.27"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
s3 = "=0.1.27"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ech-board-common = { path = "../common" }
ech-k8s = { git = "https://github.com/ech-bz/ech-k8s", rev = "769aa28d43c37e0c78129b15e32780b9d32a7e88" }

[build-dependencies]
anyhow = "1"
kopium = { version = "0.23", default-features = false }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
serde-saphyr = "0.0.27"
