[package]
name = "ech-board-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
sui-rpc = "0.3.1"
sui-sdk-types = { version = "0.3.1", features = ["serde", "hash"] }
bcs = "0.1.6"
ed25519-dalek = "2.1.1"
base64 = "0.22"
rand = "0.8.5"
futures = "0.3.31"
hex = "0.4"
graphql_client = { version = "0.14", default-features = false, features = ["graphql_query_derive"] }
ech-board-common = { path = "../common" }
