[package]
name = "ech-board-worker"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ech-board-common = { path = "../common" }
ech-k8s = { git = "https://github.com/ech-bz/ech-k8s", rev = "769aa28d43c37e0c78129b15e32780b9d32a7e88" }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["client", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.27"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
s3 = "=0.1.27"
tempfile = "3"
