[package]
name = "ech-board-worker"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ech-board-common = { path = "../common" }
ech-k8s = { git = "https://github.com/ech-bz/ech-k8s", rev = "253ffd1284ab1aadf95c1207be5ca3abb481bd43" }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["client", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.27"
thiserror = "2"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
